--- a/webdriverjs/package.json
+++ b/webdriverjs/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^2.3.0",
+    "chai-as-promised": "^5.0.0",
+    "mocha": "^2.2.5",
     "selenium-webdriver": "^2.45.1"
   }
 }
